<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/arkaplan"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/content">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView2"
        android:background="@drawable/kbu_logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="Vize notunuzu giriniz..."
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:maxLength="100"
        android:digits="0123456789"
        android:numeric="integer"
        android:inputType="number" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:hint="Vizeye ek puanınız..."
        android:layout_below="@+id/editText"
        android:inputType="number"
        android:maxLength="100"
        android:digits="0123456789"
        android:defaultValue="0"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:numeric="integer" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:hint="Finale ek puanınız..."
        android:layout_below="@+id/editText2"
        android:inputType="number"
        android:maxLength="100"
        android:digits="0123456789"
        android:defaultValue="0"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2"
        android:numeric="integer" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/gecme_not"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="30dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/content"
            android:layout_marginTop="15dp">

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temizle"
            android:id="@+id/temizle"
            android:textColor="#ffffff"
            android:background="#ffff140e"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/hesapla"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:layout_alignParentEnd="true"
            android:onClick="Clear"
            android:layout_marginRight="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hesapla"
            android:id="@+id/hesapla"
            android:textColor="#ffffff"
            android:background="#ff1a7bff"
            android:onClick="onButtonClick"
            android:layout_alignTop="@+id/temizle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    </ScrollView>

</RelativeLayout>
